# OpenCV4Android

./: .gitignore  README.md  build.gradle  settings.gradle
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/ddddl/opencvdemo/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: bm3d.cpp  haar_detect.cpp  photo_fix.cpp  pic_fix.cpp
app/src/main/cpp/include/: bm3d.h
app/src/main/java/com/ddddl/opencvdemo/: CameraActivity.kt  DetectionBasedTracker.java  DisplayModeActivity.kt  FdActivity.java  FeatureMatchUtil.kt  ImageProcess.kt  MainActivity.kt  MatUtil.kt  OpenCVApplication.kt  RealPathFromUriUtils.java
app/src/main/java/com/ddddl/opencvdemo/mace/: FeatherUtil.java  SegmentActivity.kt
app/src/main/java/com/ddddl/opencvdemo/mace/common/: AppConfig.java  Configuration.java  MessageEvent.java  ModelConfig.java  ModelInfo.java  Shape.java
app/src/main/java/com/ddddl/opencvdemo/mace/segmentation/: MaskProcessor.java  ModelSelector.java  Segmenter.java
app/src/main/java/com/ddddl/opencvdemo/nativehelper/: FaceHelper.java
app/src/main/java/com/ddddl/opencvdemo/ui/: CameraActivity.kt  CustomGalleryActivity.kt  CutViewActivity.java  DisplayModeActivity.kt  FaceBeautyActivity.java  ImageEditSampleActivity.kt  InpaintActivity.kt  MainActivity.kt  MirrorActivity.kt  OCRActivity.java  UtilActivity.kt
app/src/main/java/com/ddddl/opencvdemo/ui/baidu/: AuthService.java  Base64Util.java  BodyBean.java  BodyUtil.kt  FileUtil.java  GsonUtils.java  HttpUtil.java
app/src/main/java/com/ddddl/opencvdemo/utils/: CardNumberROIFinder.java  FastGuidedFilter.java  FeatureMatchUtil.kt  FileUtil.java  ImageProcess.kt  ImageSelectUtils.java  MatUtil.kt  RealPathFromUriUtils.java
app/src/main/java/com/ddddl/opencvdemo/view/: MyPSView.java  SegmentView.java  TouchImageView.java
app/src/main/res/layout/: activity_camera.xml  activity_cut_view.xml  activity_display_mode.xml  activity_face_beauty.xml  activity_inpaint.xml  activity_main.xml  activity_mirror.xml  activity_ocr.xml  activity_segment.xml  activity_util.xml
app/src/main/res/menu/: cv_menu.xml  util_menu.xml
app/src/main/res/values/: dimens.xml  strings.xml
app/src/test/java/com/ddddl/opencvdemo/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
openCVLibrary343/: build.gradle
openCVLibrary343/src/main/java/org/opencv/android/: CameraBridgeViewBase.java  JavaCameraView.java
photoview-2.14/: build.gradle
photoview-2.14/src/main/java/com/github/chrisbanes/photoview/: CutView.java  PhotoViewAttacher.java
